sf-hrms/force-app/main/default/objects/Regularization_Request__c/Regularization_Request__c.object-meta.xml
<CustomObject>
    <label>Regularization Request</label>
    <nameField>
        <label>Request No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regularization Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>