sf-hrms/force-app/main/default/objects/Regularization_Request__c/fields/Approver__c.field-meta.xml
<CustomField><fullName>Approver__c</fullName><label>Approver</label><type>Lookup</type><referenceTo>Employee__c</referenceTo><relationshipLabel>Regularization Approvals</relationshipLabel><relationshipName>Regularization_Approvals</relationshipName></CustomField>