sf-hrms/force-app/main/default/objects/Regularization_Request__c/fields/Employee__c.field-meta.xml
<CustomField><fullName>Employee__c</fullName><label>Employee</label><type>Lookup</type><referenceTo>Employee__c</referenceTo><relationshipLabel>Regularization Requests</relationshipLabel><relationshipName>Regularization_Requests</relationshipName></CustomField>