sf-hrms/force-app/main/default/objects/Regularization_Request__c/fields/Reason__c.field-meta.xml
<CustomField><fullName>Reason__c</fullName><label>Reason</label><type>LongTextArea</type><length>32768</length><visibleLines>3</visibleLines></CustomField>