sf-hrms/force-app/main/default/objects/Regularization_Request__c/fields/Requested_Clock_In__c.field-meta.xml
<CustomField><fullName>Requested_Clock_In__c</fullName><label>Requested Clock In</label><type>Time</type></CustomField>