sf-hrms/force-app/main/default/objects/Regularization_Request__c/fields/Requested_Clock_Out__c.field-meta.xml
<CustomField><fullName>Requested_Clock_Out__c</fullName><label>Requested Clock Out</label><type>Time</type></CustomField>