sf-hrms/force-app/main/default/objects/Regularization_Request__c/validationRules/Past_Date_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Past_Date_Only</fullName>
    <active>true</active>
    <errorConditionFormula>Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Regularization can only be requested for past dates.</errorMessage>
</ValidationRule>